--- a/pro.html
+++ b/pro.html
@@ -10,7 +10,7 @@
   <link rel="preload" as="image" href="https://images.unsplash.com/photo-1598880940080-ff9a29891b85?w=500&auto=format&fit=crop">
 </head>
 <body>
-  <a class="navbar-brand" href="wawili.html">Wawili</a>
+  <a class="navbar-brand" href="index.html">Wawili</a>
   <!-- Кнопка корзини -->
 <button id="cartButton" class="order-btn">
   <i class="fas fa-shopping-cart"></i> Кошик (<span id="cartCount">0</span>)
